# fasst

./: CMakeLists.txt  Dockerfile  README.markdown  README.md  docker-entrypoint.py
doc/: Doxyfile.in  binary-file-format.markdown  build-windows.markdown  eq.markdown  for-developers.markdown
examples/: CMakeLists.txt
examples/example1/: CMakeLists.txt  example.m.in  example.py.in
examples/example2/: CHiME_baseline.m.in  CMakeLists.txt  VQ.m
scripts/: CMakeLists.txt
scripts/MATLAB/: CMakeLists.txt  fasst_compute_mixture_covariance_matrix.m.in  fasst_estimate_source_parameters.m.in  fasst_estimate_sources.m.in
scripts/python/: CMakeLists.txt  fasst.py.in
src/: CMakeLists.txt  comp-rx.cpp  model-estimation.cpp  source-estimation.cpp
src/fasst/: Audio.cpp  Audio.h  Audio_test.cpp  CMakeLists.txt  ERBRepr.cpp  ERBRepr.h  MixCovMatrix.cpp  MixCovMatrix.h  MixCovMatrix_test.cpp  MixingParameter.cpp  MixingParameter.h  MixingParameter_test.cpp  NaturalStatistics.cpp  NaturalStatistics.h  NonNegMatrix.cpp  NonNegMatrix.h  NonNegMatrix_test.cpp  Parameter.h  Source.cpp  Source.h  Source_test.cpp  Sources.cpp  Sources.h  Sources_test.cpp  SpectralPower.cpp  SpectralPower.h  TFRepr.cpp  TFRepr.h  TFRepr_test.cpp  XMLDoc.cpp  XMLDoc.h  lowpass.h  typedefs.h
